crates/graphcal-project/tests/snapshots/error_snapshots__error_complex_component_dimension_mismatch.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected Length, found Time
    Diagnostic severity: error
Begin snippet for complex_component_dimension_mismatch.gcl starting at line 1, column 1

snippet line 1: node invalid: Complex<Length> = complex(1.0 m, 2.0 s);
    label at line 1, columns 48 to 52: has dimension Time
diagnostic help: real and imaginary components must have the same dimension
diagnostic code: graphcal::D001
