crates/graphcal-project/tests/snapshots/error_snapshots__error_complex_domain_constraint.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
domain constraints are not valid on `Complex` types
    Diagnostic severity: error
Begin snippet for complex_domain_constraint.gcl starting at line 1, column 1

snippet line 1: param invalid: Complex<Length>(min: complex(0.0 m, 0.0 m)) = complex(1.0 m, 2.0 m);
    label at line 1, columns 1 to 83: constraints not valid here
diagnostic help: domain constraints (min/max) are only valid on quantity, Int, and Datetime types
diagnostic code: graphcal::C004
